--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     </div>
 
     <div class="group-icon">
-        <img src="https://images.unsplash.com/photo-1531427186611-ecfd6d936c79?w=600" alt="Group Girls">
+        <img src="https://quan-nguyen-9RhjlesiNHQ-unsplash.jpg" alt="Group Girls">
     </div>
 
     <div class="loading-dot"></div>
