--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     </div>
 
     <div class="group-icon">
-        <img src="https://quan-nguyen-9RhjlesiNHQ-unsplash.jpg" alt="Group Girls">
+        <img src="https://raw.githubusercontent.com/quan-nguyen-9RhjlesiNHQ-unsplash.jpg" alt="Group Girls">
     </div>
 
     <div class="loading-dot"></div>
